# YT-Converter

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  YT2MP3.cpp  YT2MP3.h  quick-test.sh  yt2mp3  yt2mp3-API  yt2mp3-API.cpp  yt2mp3-API.h
.github/workflows/: build.yml  code-quality.yml
docs/: ARCHITECTURE.md  TESTING.md
include/: converter.h  logger.h  validation.h
src/api/: server.cpp
src/cli/: main.cpp
src/core/: converter.cpp
src/utils/: logger.cpp  validation.cpp
